fix nav spacing on mobile

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -101,9 +101,9 @@
         gap: 1rem;
         position: absolute;
         top: 100%;
-        right: 1rem;
+        right: 0px;
         background-color: #000000; /* Match navbar color */
-        padding: 1rem;
+        padding: 1rem 0 1.5rem;
         border-radius: 4px;
         z-index: 10;
     }
